bridge/base/0-peo-worksystem-namespace.yaml
#! 0-peo-worksystem-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: peo-worksystem
    labels:
        com.docker.compose.project: peo-worksystem
